--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-205.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-959.8KB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-220.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-713.7KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-686.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-601.8KB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-650.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-861.6KB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-479.9KB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-686.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-591.1KB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-323.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-772.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-435.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-205.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-601.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-650.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-861.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-479.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-686.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
