--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-357.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-160.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-285.8KB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-959.8KB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-357.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-767.3KB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-214.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-323.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-772.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-418.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-435.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-873.0KB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-160.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-285.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-959.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-357.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-767.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-323.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-772.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-418.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-435.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
