--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.61MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-799.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-636.4KB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-214.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-949.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-873.0KB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-636.4KB/s(Youtube:不良林), server: 51.161.118.38, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-799.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-485.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-455.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-214.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1012.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-873.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-636.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-455.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
